--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="container">
         <div class="box">
             <h1>Berserk Vol. 1</h1>
-            <img src="/images/berserk1.jpg">
+            <img src="images/berserk1.jpg">
             <p>O misterioso Guts, o "Espadachim Negro", carrega em sua mão mecânica uma enorme espada, e em seu pescoço uma estranha marca que atrai forças demoníacas. Em sua busca por vingança contra um antigo inimigo, nem tudo sai a seu favor, e ele recebe ajuda de uma fantástica criatura.
             </p>
-            <div class="price-box">
+            <div>
                 <p class="price">R$ 34,90</p>
             <div><input type="button" value="Comprar"></div>
             </div>
         </div>
         <div class="box">
             <h1>One Piece Vol. 103</h1>
-            <img src="/images/onepiece103.jpg">
+            <img src="images/onepiece103.jpg">
             <p>Bem quando Sanji e Zoro derrotaram dois dos Grandes Astros dos Piratas Bestiais a luta entre Luffy e Kaido se intensifica ainda mais!! Enquanto isso, Kid e Law travam uma intensa batalha contra Big Mom!! Será que esses dois Imperadores que dominam os mares há tanto tempo podem mesmo ser derrotados?!</p>
-            <div class="price-box">
+            <div>
                 <p class="price">R$ 34,90</p>
             <div><input type="button" value="Comprar"></div>
             </div>
@@ -34,7 +34,7 @@
             <h1>Chainsaw Man Vol. 11</h1>
             <img src="images/chainsaw11.jpg">
             <p>O controle cruel e impiedoso de Makima segue perseguindo Denji! Mas é durante sua aflição por ter perdido inúmeras coisas e a sensação de ter seu coração afundado num vaso entupido de merda que Denji ouve os gritos de “Chainsaw Man” ecoando pelo mundo...!!</p>
-            <div class="price-box">
+            <div>
                 <p class="price">R$ 24,90</p>
             <div><input type="button" value="Comprar"></div>
             </div>
@@ -43,7 +43,7 @@
             <h1>One Piece Vol. 4</h1>
             <img src="images/onepiece4.jpg">
             <p>Luffy e seus companheiros chegam à vila de Usopp em busca de um novo navio. Mas, por um acaso, eles descobrem as terríveis intenções de um perigoso ex-capitão pirata disfarçado de mordomo!</p>
-            <div class="price-box">
+            <div>
                 <p class="price">R$ 32,90</p>
             <div><input type="button" value="Comprar"></div>
             </div>
